imported old notes
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3483 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -14,9 +14,29 @@
 	title			= "Alignment of the CDF roman pot spectrometer",
 	conference		= "HERA - LHC workshop",
 	journal			= "HERA - LHC workshop",
-	year			= "2005"
+	year			= "2005",
 	link			= "http://indico.cern.ch/materialDisplay.py?contribId=s7t4\&sessionId=8\&\hfil\break materialId=0\&confId=a045699"
 }
+
+@Article{Islam2003,
+		author="M. M. Islam, R. J. Luddy, A. V. Prokudin",
+		title="pp elastic scattering at LHC and nucleon structure",
+		journal="Mod. Phys. Lett. ",
+		volume="A18",
+		number="11",
+		year="2003",
+		pages="743--752"
+}	
+
+@Article{Islam1987,
+		author="M. M. Islam, V. Innocente, T. Fearnley, G. Sanguietti",
+		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
+		journal="Europhys. Lett.",
+		volume="4",
+		year="1987",
+		pages="189--196"
+}
+    
 
 @Article{Islam2007,
      author    = "Islam, M. M. and Kaspar, J. and Luddy, R. J.",
@@ -36,8 +56,8 @@
 		pages="115--122"
 }    
 
-
-@Article{IslamReview,
+% the review
+@Article{Islam2006,
      author    = "Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
      title     = "{Near forward $p p$ elastic scattering at LHC and nucleon
                   structure}",
@@ -113,6 +133,15 @@
      SLACcitation  = "%%CITATION = HEP-PH/0206012;%%"
 }
 
+@Article{cahn,
+		author="R. Cahn",
+		title="Coulombic - hadronic interference in an eikonal model",
+		journal="Zeit. Phys.",
+		volume="C15",
+		year="1982",
+		pages="253"
+}
+
 @Article{wy,
      author    = "West, Geoffrey B. and Yennie, D. R.",
      title     = "{Coulomb interference in high-energy scattering}",
@@ -134,4 +163,35 @@
      pages     = "619-630",
      doi       = "10.1007/BF01557628",
      SLACcitation  = "%%CITATION = ZEPYA,C63,619;%%"
+}
+
+@Book{barlow,
+	author    = "Barlow, R. J.",
+	title     = "Statistics: a guide to the use of statistical methods in the physical sciences.",
+	publisher = "Wiley",
+	year	  = "1989"
+}
+
+@Techreport{smearing,
+	author			= "Ka\v spar, J.",
+	institution		= "TOTEM",
+	title			= "Description and simulation of beam smearing effects",
+	type			= "TOTEM-NOTE"
+	number			= "2007-005"
+	year			= "2007"
+}
+
+@Article{tdr,
+		author="TOTEM collaboration",
+		title="Technical design report",
+		pages="CERN-LHCC-2004-002",
+		year="2004",
+		journal=""
+}
+
+@Article{blois11,
+		author="TOTEM collaboration",
+		title="TOTEM physics",
+		year="2006",
+		journal="XIth Blois Conference"
 }
